fix button alignment

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -121,11 +121,13 @@ div.div-email-join-waitlist button {
     padding: 15px 20px;
     border-radius: 12px;
     border-width: 0;
-    margin-left: 30px;
     color: white;
     background-color: #004dfc;
     font-weight: 700;
+    float: right;
     text-decoration: none;
+    margin-top: 9px;
+    margin-right: 10px;
 }
 
 form input {
